--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,8 +1,22 @@
 # 随堂笔记
-## 1-1搭建逻辑门
-## 1-2二进制计算
-## 1-3搭建内存
-## 1-4机器语言、汇编语言
-## 1-5搭建计算机
-## 1-6写一个汇编器
+- partI
+## 1 搭建逻辑门
+## 2 二进制计算
+## 3 搭建内存
+## 4 机器语言、汇编语言
+## 5 搭建计算机
+## 6 写一个汇编器
+- PartII
+## 7 Virtual Machine 中间语言与虚拟机
+## 8 完成中间语言的翻译器
+## 9 Jack Language介绍
+## 10 tokenizer 词法分析器
+## 11 Compiler 写一个编译器
+## 12 OS 用Jack写操作系统
 # 总结
+## 计算机的硬件构造
+## ROM和RAM
+## 芯片的结构和工作原理
+## 如何“指挥”芯片干活
+## 
+## 操作系统、软件和编程
