--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,6 +1,7 @@
 # 随堂笔记
 - partI
 ## 1 搭建逻辑门
+
 ## 2 二进制计算
 ## 3 搭建内存
 ## 4 机器语言、汇编语言
@@ -15,7 +16,21 @@
 ## 12 OS 用Jack写操作系统
 # 总结
 ## 计算机的硬件构造
-## ROM和RAM
+
+一台计算机，不论有多么先进，都是由是四大类硬件组成的。
+
+- 数据存储设备，如ROM和RAM
+  
+  ROM和RAM是一种硬件，硬件结构的原理一样，只不过用途不同。
+  - ROM，存储程序指令
+  - RAM，存储程序执行所产生的数据
+
+- 芯片
+  
+- 输入设备
+
+- 输出设备
+## ROM和RAM的结构
 ## 芯片的结构和工作原理
 ## 如何“指挥”芯片干活
 ## 
