--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,7 +1,14 @@
 # 随堂笔记
 - partI
 ## 1 搭建逻辑门
-
+  Nand(a,b)
+  a|b|Nand
+  :---:|:---:|:---:
+  0|0|1
+  0|1|1
+  1|0|1 
+  1|1|0
+  
 ## 2 二进制计算
 ## 3 搭建内存
 ## 4 机器语言、汇编语言
@@ -21,15 +28,20 @@
 
 - 数据存储设备，如ROM和RAM
   
-  ROM和RAM是一种硬件，硬件结构的原理一样，只不过用途不同。
+  ROM和RAM是同一种硬件，硬件结构的原理一样，只不过用途不同。就是一串寄存器DFF。
   - ROM，存储程序指令
   - RAM，存储程序执行所产生的数据
 
 - 芯片
+
+  由一个由逻辑门搭建的核心计算单元ALU，和几个寄存器DFF构成。
   
 - 输入设备
 
+  
+  
 - 输出设备
+  
 ## ROM和RAM的结构
 ## 芯片的结构和工作原理
 ## 如何“指挥”芯片干活
