--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,26 +1,39 @@
 # 随堂笔记
-- partI
-## 1 搭建逻辑门
-  Nand(a,b)
-  a|b|Nand
-  :---:|:---:|:---:
-  0|0|1
-  0|1|1
-  1|0|1 
-  1|1|0
-  
-## 2 二进制计算
-## 3 搭建内存
-## 4 机器语言、汇编语言
-## 5 搭建计算机
-## 6 写一个汇编器
-- PartII
-## 7 Virtual Machine 中间语言与虚拟机
-## 8 完成中间语言的翻译器
-## 9 Jack Language介绍
-## 10 tokenizer 词法分析器
-## 11 Compiler 写一个编译器
-## 12 OS 用Jack写操作系统
+### partI
+### 1 搭建逻辑门
+
+
+
+|a|b|`Nand`|`And`|`Or`|`Xor`
+|:---:|:---:|:---:|:---:|:---:|:---:
+|0|0|`1`|`0`|`0`|`0`
+|0|1|`1`|`0`|`1`|`1`
+|1|0|`1`|`0`|`1`|`1`
+|1|1|`0`|`1`|`1`|`0` 
+
+|sel|a|b|Mux|`  `|sel|in|DMux|`a`|`b`
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:
+|0|0|0|a|`0`|0|0|in,0|`0`|`0`
+|0|0|1|a|`0`
+|0|1|0|a|`1`|0|1|in,0|`1`|`0`
+|0|1|1|a|`1`
+|1|0|0|b|`0`
+|1|0|1|b|`1`|1|0|0,in|`0`|`0`
+|1|1|0|b|`0`
+|1|1|1|b|`1`|1|1|0,in|`0`|`1` 
+
+### 2 二进制计算
+### 3 搭建内存
+### 4 机器语言、汇编语言
+### 5 搭建计算机
+### 6 写一个汇编器
+### PartII
+### 7 Virtual Machine 中间语言与虚拟机
+### 8 完成中间语言的翻译器
+### 9 Jack Language介绍
+### 10 tokenizer 词法分析器
+### 11 Compiler 写一个编译器
+### 12 OS 用Jack写操作系统
 # 总结
 ## 计算机的硬件构造
 
