--- a/学习笔记.md
+++ b/学习笔记.md
@@ -2,25 +2,28 @@
 ### partI
 ### 1 搭建逻辑门
 
+|in |`Not`
+|:-:|:---:
+| 0 | `1`
+| 1 | `0`
 
+| a | b |`Nand`|`And`|`Or`|`Xor`
+|:-:|:-:|:----:|:---:|:--:|:---:
+| 0 | 0 |  `1` | `0` | `0`| `0`
+| 0 | 1 |  `1` | `0` | `1`| `1`
+| 1 | 0 |  `1` | `0` | `1`| `1`
+| 1 | 1 |  `0` | `1` | `1`| `0` 
 
-|a|b|`Nand`|`And`|`Or`|`Xor`
-|:---:|:---:|:---:|:---:|:---:|:---:
-|0|0|`1`|`0`|`0`|`0`
-|0|1|`1`|`0`|`1`|`1`
-|1|0|`1`|`0`|`1`|`1`
-|1|1|`0`|`1`|`1`|`0` 
-
-|sel|a|b|Mux|`  `|sel|in|DMux|`a`|`b`
-|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:
-|0|0|0|a|`0`|0|0|in,0|`0`|`0`
-|0|0|1|a|`0`
-|0|1|0|a|`1`|0|1|in,0|`1`|`0`
-|0|1|1|a|`1`
-|1|0|0|b|`0`
-|1|0|1|b|`1`|1|0|0,in|`0`|`0`
-|1|1|0|b|`0`
-|1|1|1|b|`1`|1|1|0,in|`0`|`1` 
+|sel| a | b |Mux|`out`|sel|in |DMux|`a`|`b`
+|:-:|:-:|:-:|:-:|:---:|:-:|:-:|:--:|:-:|:-:
+| 0 | 0 | 0 | a | `0` | 0 | 0 |in,0|`0`|`0`
+| 0 | 0 | 1 | a | `0`
+| 0 | 1 | 0 | a | `1` | 0 | 1 |in,0|`1`|`0`
+| 0 | 1 | 1 | a | `1`
+| 1 | 0 | 0 | b | `0`
+| 1 | 0 | 1 | b | `1` | 1 | 0 |0,in|`0`|`0`
+| 1 | 1 | 0 | b | `0`
+| 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
 
 ### 2 二进制计算
 ### 3 搭建内存
@@ -41,7 +44,7 @@
 
 - 数据存储设备，如ROM和RAM
   
-  ROM和RAM是同一种硬件，硬件结构的原理一样，只不过用途不同。就是一串寄存器DFF。
+  ROM和RAM是同一种硬件，硬件结构的原理一样，只不过用途不同。就是一串一字排列的寄存器DFF。
   - ROM，存储程序指令
   - RAM，存储程序执行所产生的数据
 
@@ -50,12 +53,17 @@
   由一个由逻辑门搭建的核心计算单元ALU，和几个寄存器DFF构成。
   
 - 输入设备
-
   
+  向RAM指定地址推送数据
   
 - 输出设备
+
+  从RAM指定地址取用数据
+
+输入和输出设备与计算机之间的分工配合，靠硬件协议和驱动程序来规范
   
 ## ROM和RAM的结构
+
 ## 芯片的结构和工作原理
 ## 如何“指挥”芯片干活
 ## 
