--- a/学习笔记.md
+++ b/学习笔记.md
@@ -26,6 +26,9 @@
 | 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
 
 ### 2 二进制计算
+- 十进制转二进制
+- 二进制下负数的表达
+- 二进制转十进制
 ### 3 搭建内存
 ### 4 机器语言、汇编语言
 ### 5 搭建计算机
