--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,7 +1,18 @@
 # 随堂笔记
 ### partI
 ### 1 搭建逻辑门
+- 整个计算机只有Nand门一种逻辑元件。
 
+  所有逻辑公式都可以用Not,And和Or来表达，<br/>
+  而Not、And和Or都可以只用Nand来表达，<br/>
+  所以每种逻辑公式都可以简化成只包含Nand的表达式，<br/>
+  因此每种逻辑门都可以只用Nand来搭建。<br/>
+  - **Not**(_x_) = _x_ **Nand** _x_
+  - _x_ **And** _y_ = **Not**(_x_ **Nand** _y_)
+  - _x_ **Or** _y_ = **Not**(**Not**(_x_) **And** **Not**(_y_))
+  - _x_ **Xor** _y_ = ( _x_ **And** **Not**(_y_) **Or** **Not**(_x_) **And** _y_ )
+
+基础逻辑门的真值表如下
 |in |`Not`
 |:-:|:---:
 | 0 | `1`
@@ -25,7 +36,12 @@
 | 1 | 1 | 0 | b | `0`
 | 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
 
-### 2 二进制计算
+
+
+### 2 二进制和ALU运算单元
+
+计算机由若干Nand门组成，逻辑门只能输入输出，如“真 _vs_ 假”或“1 _vs_ 0”，这样的互为对立的数据。因此计算机的芯片只能做二进制数学运算和逻辑运算。
+
 - 十进制转二进制
 - 二进制下负数的表达
 - 二进制转十进制
