--- a/学习笔记.md
+++ b/学习笔记.md
@@ -10,7 +10,7 @@
   - **Not**(_x_) = _x_ **Nand** _x_
   - _x_ **And** _y_ = **Not**(_x_ **Nand** _y_)
   - _x_ **Or** _y_ = **Not**(**Not**(_x_) **And** **Not**(_y_))
-  - _x_ **Xor** _y_ = ( _x_ **And** **Not**(_y_) **Or** **Not**(_x_) **And** _y_ )
+  - _x_ **Xor** _y_ = ( _x_ **Nand** **Not**(_y_) **And** **Not**(_x_) **Nand** _y_ )
 
 基础逻辑门的真值表如下
 |in |`Not`
