--- a/学习笔记.md
+++ b/学习笔记.md
@@ -7,10 +7,13 @@
   而Not、And和Or都可以只用Nand来表达，<br/>
   所以每种逻辑公式都可以简化成只包含Nand的表达式，<br/>
   因此每种逻辑门都可以只用Nand来搭建。<br/>
-  - **Not**(_x_) = _x_ **Nand** _x_
-  - _x_ **And** _y_ = **Not**(_x_ **Nand** _y_)
-  - _x_ **Or** _y_ = **Not**(**Not**(_x_) **And** **Not**(_y_))
-  - _x_ **Xor** _y_ = ( _x_ **Nand** **Not**(_y_) **And** **Not**(_x_) **Nand** _y_ )
+  - Not(_x_) = _x_ Nand _x_
+  - _x_ And _y_ = Not(_x_ Nand _y_)<br/>
+    =(_x_ Nand _y_) Nand (_x_ Nand _y_)
+  - _x_ Or _y_ = Not(Not(_x_) And Not(_y_))<br/>
+  = (_x_ Nand _x_) Nand (_y_ Nand _y_)
+  - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
+   =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
 
 基础逻辑门的真值表如下
 |in |`Not`
