--- a/学习笔记.md
+++ b/学习笔记.md
@@ -15,6 +15,8 @@
   - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
    =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
 
+<img src=/Not-And-Or-Xor.svg>
+
 基础逻辑门的真值表如下
 |in |`Not`
 |:-:|:---:
