--- a/学习笔记.md
+++ b/学习笔记.md
@@ -14,34 +14,41 @@
   = (_x_ Nand _x_) Nand (_y_ Nand _y_)
   - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
    =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
+- 数字逻辑电路图
+  - Not | And | Or | Xor
+    <img src=/Not-And-Or-Xor.svg>
+  - Mux | DMux
 
-<img src=/Not-And-Or-Xor.svg>
+    
+- 真值表
+  - Not
+    
+    |in |`Not`
+    |:-:|:---:
+    | 0 | `1`
+    | 1 | `0`
 
-基础逻辑门的真值表如下
-|in |`Not`
-|:-:|:---:
-| 0 | `1`
-| 1 | `0`
+  - Nand | And | Or | Xor 
+    
+    | a | b |`Nand`|`And`|`Or`|`Xor`
+    |:-:|:-:|:----:|:---:|:--:|:---:
+    | 0 | 0 |  `1` | `0` | `0`| `0`
+    | 0 | 1 |  `1` | `0` | `1`| `1`
+    | 1 | 0 |  `1` | `0` | `1`| `1`
+    | 1 | 1 |  `0` | `1` | `1`| `0` 
 
-| a | b |`Nand`|`And`|`Or`|`Xor`
-|:-:|:-:|:----:|:---:|:--:|:---:
-| 0 | 0 |  `1` | `0` | `0`| `0`
-| 0 | 1 |  `1` | `0` | `1`| `1`
-| 1 | 0 |  `1` | `0` | `1`| `1`
-| 1 | 1 |  `0` | `1` | `1`| `0` 
+  - Mux | DMux
 
-|sel| a | b |Mux|`out`|sel|in |DMux|`a`|`b`
-|:-:|:-:|:-:|:-:|:---:|:-:|:-:|:--:|:-:|:-:
-| 0 | 0 | 0 | a | `0` | 0 | 0 |in,0|`0`|`0`
-| 0 | 0 | 1 | a | `0`
-| 0 | 1 | 0 | a | `1` | 0 | 1 |in,0|`1`|`0`
-| 0 | 1 | 1 | a | `1`
-| 1 | 0 | 0 | b | `0`
-| 1 | 0 | 1 | b | `1` | 1 | 0 |0,in|`0`|`0`
-| 1 | 1 | 0 | b | `0`
-| 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
-
-
+    |sel| a | b |Mux|`out`|sel|in |DMux|`a`|`b`
+    |:-:|:-:|:-:|:-:|:---:|:-:|:-:|:--:|:-:|:-:
+    | 0 | 0 | 0 | a | `0` | 0 | 0 |in,0|`0`|`0`
+    | 0 | 0 | 1 | a | `0`
+    | 0 | 1 | 0 | a | `1` | 0 | 1 |in,0|`1`|`0`
+    | 0 | 1 | 1 | a | `1`
+    | 1 | 0 | 0 | b | `0`
+    | 1 | 0 | 1 | b | `1` | 1 | 0 |0,in|`0`|`0`
+    | 1 | 1 | 0 | b | `0`
+    | 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
 
 ### 2 二进制和ALU运算单元
 
