--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,7 +1,7 @@
 # 随堂笔记
 ### partI
 ### 1 搭建逻辑门
-- 整个计算机只有Nand门一种逻辑元件。
+- 整个计算机可以只有Nand门一种逻辑元件。
 
   所有逻辑公式都可以用Not,And和Or来表达，<br/>
   而Not、And和Or都可以只用Nand来表达，<br/>
@@ -14,6 +14,8 @@
   = (_x_ Nand _x_) Nand (_y_ Nand _y_)
   - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
    =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
+  - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
+  - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
 - 数字逻辑电路图
   - Not | And | Or | Xor
     <img src=/Not-And-Or-Xor.svg>
