--- a/学习笔记.md
+++ b/学习笔记.md
@@ -18,9 +18,9 @@
   - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
 - 数字逻辑电路图
   - Not | And | Or | Xor
-    <img src=/Not-And-Or-Xor.svg>
+    <img src=/SVG/Not-And-Or-Xor.svg>
   - Mux | DMux
-
+     <img src=/SVG/Mux-DMux.svg>
     
 - 真值表
   - Not
