--- a/学习笔记.md
+++ b/学习笔记.md
@@ -17,14 +17,16 @@
   - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
   - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
 - 数字逻辑电路图
-  - Not | And | Or | Xor
+  - Not | And | Or | Xor 只用Nand
     
     <img src=/SVG/Not-And-Or-Xor.svg>
     
-  - Mux | DMux
+  - Mux | DMux  只用Nand
     
-     <img src=/SVG/Mux-DMux.svg>
-    
+    <img src=/SVG/Mux-DMux.svg>
+  - Mux4Way16 两种组法
+
+    <img src=/SVG/Mux4Way16.svg>
 - 真值表
   - Not
     
