--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,6 +1,8 @@
-# 随堂笔记
-### partI
-### 1 搭建逻辑门
+# 随堂笔记  
+
+  重点知识摘抄，默写软硬件逻辑结构，解题过程中需要用到的公式表格
+  
+## 1 搭建逻辑门
 - 整个计算机可以只有Nand门一种逻辑元件。
 
   所有逻辑公式都可以用Not,And和Or来表达，<br/>
@@ -57,24 +59,24 @@
     | 1 | 1 | 0 | b | `0`
     | 1 | 1 | 1 | b | `1` | 1 | 1 |0,in|`0`|`1` 
 
-### 2 二进制和ALU运算单元
+## 2 二进制和ALU运算单元
 
 计算机由若干Nand门组成，逻辑门只能输入输出，如“真 _vs_ 假”或“1 _vs_ 0”，这样的互为对立的数据。因此计算机的芯片只能做二进制数学运算和逻辑运算。
 
 - 十进制转二进制
 - 二进制下负数的表达
 - 二进制转十进制
-### 3 搭建内存
-### 4 机器语言、汇编语言
-### 5 搭建计算机
-### 6 写一个汇编器
+## 3 搭建内存
+## 4 机器语言、汇编语言
+## 5 搭建计算机
+## 6 写一个汇编器
 ### PartII
-### 7 Virtual Machine 中间语言与虚拟机
-### 8 完成中间语言的翻译器
-### 9 Jack Language介绍
-### 10 tokenizer 词法分析器
-### 11 Compiler 写一个编译器
-### 12 OS 用Jack写操作系统
+## 7 Virtual Machine 中间语言与虚拟机
+## 8 完成中间语言的翻译器
+## 9 Jack Language介绍
+## 10 tokenizer 词法分析器
+## 11 Compiler 写一个编译器
+## 12 OS 用Jack写操作系统
 # 总结
 ## 计算机的硬件构造
 
