--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,6 +1,8 @@
 # 随堂笔记  
 
-  重点知识摘抄，默写软硬件逻辑结构，解题过程中需要用到的公式表格
+  重点知识摘抄，
+  默写（绘制）软硬件逻辑结构，
+  重要的公式和表格。
   
 ## 1 搭建逻辑门
 - 整个计算机可以只有Nand门一种逻辑元件。
@@ -19,14 +21,14 @@
   - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
   - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
 - 数字逻辑电路图
-  - Not | And | Or | Xor 只用Nand
+  - Not | And | Or | Xor （只用Nand）
     
     <img src=/SVG/Not-And-Or-Xor.svg>
     
-  - Mux | DMux  只用Nand
+  - Mux | DMux  （只用Nand）
     
     <img src=/SVG/Mux-DMux.svg>
-  - Mux4Way16 两种组法
+  - Mux4Way16 （两种组法）
 
     <img src=/SVG/Mux4Way16.svg>
 - 真值表
