--- a/学习笔记.md
+++ b/学习笔记.md
@@ -20,7 +20,7 @@
    =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
   - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
   - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
-- 数字逻辑电路图
+### 数字逻辑电路图
   - Not | And | Or | Xor （只用Nand）
     
     <img src=/SVG/Not-And-Or-Xor.svg>
@@ -31,7 +31,7 @@
   - Mux4Way16 （两种组法）
 
     <img src=/SVG/Mux4Way16.svg>
-- 真值表
+### 真值表
   - Not
     
     |in |`Not`
