--- a/学习笔记.md
+++ b/学习笔记.md
@@ -66,7 +66,30 @@
 计算机由若干Nand门组成，逻辑门只能输入输出，如“真 _vs_ 假”或“1 _vs_ 0”，这样的互为对立的数据。因此计算机的芯片只能做二进制数学运算和逻辑运算。
 
 - 十进制转二进制
+
+  任意十进制正整数可以写成一个只由2<sup>n</sup>组成的加法序列<br/>
+  如：99=64+32+2+1
+
+  |n...            | 7 | 6 | 5 | 4 | 3 | 2 | 1 | 0 
+  |:--------------:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:
+  |2<sup>n</sup>...|128|64 |32 |16 | 8 | 4 | 2 | 1
+  |99=             |   |64+|32+|   |   |   |2+ | 1
+  |binary(99)=     | 0 | 1 | 1 | 0 | 0 | 0 | 1 | 1
+
+  十进制的正整数 **x** 转二进制的计算步骤：
+  
+  找出 **x** 里包含的最大的**2的n次方**，在二进制**n**位上写1，<br/>
+  **x** 减去这个2的n次方，如果有余数：<br/>
+  找出**余数**里包含的最大的**2的m次方**，在二进制**m**位上写1，<br/>
+  **余数** 减去这个2的m次方，如果还有余数：<br/>
+  继续上述过程直到余数减为0。<br/>
+
+  二进制是从右往左书写的n←←←0。它的第一位是0（不是1）<br/>
+  aka. 0位在最右边，n位在最左边
+  
 - 二进制下负数的表达
+
+  
 - 二进制转十进制
 ## 3 搭建内存
 ## 4 机器语言、汇编语言
