--- a/学习笔记.md
+++ b/学习笔记.md
@@ -76,10 +76,10 @@
   |99=             |   |64+|32+|   |   |   |2+ | 1
   |binary(99)=     | 0 | 1 | 1 | 0 | 0 | 0 | 1 | 1
 
-  十进制的正整数 **x** 转二进制的计算步骤：
+  十进制的正整数 **X** 转二进制的计算步骤：
   
-  找出 **x** 里包含的最大的**2的n次方**，在二进制**n**位上写1，<br/>
-  **x** 减去这个2的n次方，如果有余数：<br/>
+  找出 **X** 里包含的最大的**2的n次方**，在二进制**n**位上写1，<br/>
+  **X** 减去这个2的n次方，如果有余数：<br/>
   找出**余数**里包含的最大的**2的m次方**，在二进制**m**位上写1，<br/>
   **余数** 减去这个2的m次方，如果还有余数：<br/>
   继续上述过程直到余数减为0。<br/>
@@ -89,6 +89,34 @@
   
 - 二进制下负数的表达
 
+  在纯数学概念里的二进制数字，就像阿拉伯数字一样，表达的是正整数。若要表达负数（也包括小数分，分数等其他类型的数字），需要借助符号。但是计算机能读取的数据只有0和1，计算机不认识符号，也不能直接写入符号。
+
+  **因此负数在计算机里的实现，纯靠人为规定。**
+
+  计算机内存RAM是由8个（或16/32/64个）字节构成一个最基础的单元，我们规定最左边的（n最大）的一位用来表示正负号。0表示正数，1表示负数。剩下的7位（15/31/63位）用来表达绝对值。
+
+  **但是，事情没这么简单**
+
+  如果负数**Y**的二进制直接写成1+|Y|的二进制，会导致两个问题：
+  - 0会有+0和-0两个二进制数值：0 0-0000和1 0-0000；
+  - 直接做二进制加减法的时候，会得到错误的计算结果。例如：
+    |dec|  | binary |
+    |:-:|-:|-------:|
+    | -8|  |10001000|
+    | 12| +|00001100|
+    |-20| =|10010100|
+
+  解决方案是，用**补码法**表达二进制负数。
+
+  **负数Y**的二进制：
+  
+      计算Y的二进制表达：
+        y=abs(Y)
+        bin(y)
+      取反，每一位进行0，1互换/0换1，1换0/1111-1111-binary(Y)
+        Not(bin(y))
+      加1，
+        Not(bin(y))+1
   
 - 二进制转十进制
 ## 3 搭建内存
