--- a/学习笔记.md
+++ b/学习笔记.md
@@ -106,14 +106,14 @@
     | 12| +|00001100|
     |-20| =|10010100|
 
-  解决方案是，用**补码法**表达二进制负数。
+  **解决方案是**，用**补码法**表达二进制负数。
 
   **负数Y**的二进制：
   
       计算Y的二进制表达：
         y=abs(Y)
-        bin(y)
-      取反，每一位进行0，1互换/0换1，1换0/1111-1111-binary(Y)
+        bin=(y)
+      取反，Not/每一位进行0，1互换(0换1，1换0)/1111-1111-bin=(y)
         Not(bin(y))
       加1，
         Not(bin(y))+1
