--- a/学习笔记.md
+++ b/学习笔记.md
@@ -84,7 +84,7 @@
   **余数** 减去这个2的m次方，如果还有余数：<br/>
   继续上述过程直到余数减为0。
 
-      '''python
+      ```python
       nSqrofTwo=[128,64,32,16,8,4,2,1]
       binary=[0,0,0,0,0,0,0,0]
       X=int( )  #括号里需要填一个数字
@@ -92,7 +92,7 @@
       for i in nsqrofTwo:
         if not X < nSqrofTwo[i]:
           rem = X-nSqrofTwo[i]
-      '''
+      ```
   二进制是从右往左书写的n←←←0。它的第一位是0（不是1）<br/>
   aka, 0位在最右边，n位在最左边
   
