--- a/学习笔记.md
+++ b/学习笔记.md
@@ -86,15 +86,16 @@
   
     ```python
     
-    nSqrofTwo=[128,64,32,16,8,4,2,1]
+    X=int()  #括号里需要填一个数字
+    
+    nSqrTwo=[128,64,32,16,8,4,2,1]
     binary=[0,0,0,0,0,0,0,0]
     
-    X=int()  #括号里需要填一个数字
     binX=binary
-    for i in nSqrofTwo:
-      if not X<i:
+    for i in nSqrTwo:
+      if not X < i:
         rem = X-i
-        binX[nSqrofTwo.index(i)]=1
+        binX[nSqrTwo.index(i)]=1
     
     print(*binX,sep='')
 
