--- a/学习笔记.md
+++ b/学习笔记.md
@@ -110,7 +110,7 @@
   
     **因此负数在计算机里的实现，纯靠人为规定。**
   
-    计算机内存RAM是由8个（或16/32/64个）字节构成一个最基础的单元，我们规定最左边的（n最大）的一位用来表示正负号。0表示正数，1表示负数。剩下的7位（15/31/63位）用来表达绝对值。
+    计算机内存RAM是由8个（或16/32/64个）bit构成一个最基础的单元，我们规定最左边的（n最大）的一位用来表示正负号。0表示正数，1表示负数。剩下的7位（15/31/63位）用来表达绝对值。
   
     **但是，事情没这么简单**
   
