--- a/学习笔记.md
+++ b/学习笔记.md
@@ -101,7 +101,7 @@
 
     ```
 
-    二进制是从右往左书写的n←←←0。它的第一位是0（不是1）<br/>
+    二进制是从右往左书写的n←←←0。它的第一位序号是0（不是1）<br/>
     aka, 0位在最右边，n位在最左边
     
   - 二进制下负数的表达
