--- a/学习笔记.md
+++ b/学习笔记.md
@@ -5,21 +5,39 @@
   重要的公式和表格。
   
 ## 1 搭建逻辑门
-- 整个计算机可以只有Nand门一种逻辑元件。
+### 什么是逻辑门？
+  逻辑门直译自logic gates，也叫与非门。每种逻辑门都对应一种常见的逻辑思维方式/公式。
+  - Not非门，把判断结论输入Not，返回相反的结果
+    - 真变假，错变对，0变1，1变0；
+  - And与门，判断是不是都对/都是真的/都是1
+    - 如果给定条件都对了，才算对，否则算错
+    - 输入项的都是1返回1，其余返回0
+  - Or或门，判断是不是有对的/真的/1，
+    - 只要有一个对了就算你“通过”，都答错了那“不合格”
+    - 只要有一个1就返回1，都是0才返回0
+  - Nand与非门，判断是不是都不对/都假/都是0，先判断And再经过Not
+    - 所有坑都踩中了那“不行”，有几个避开了那还算“可以”。
+    - 输入的都是1返回0，其余返回1
+  - Xor异或门，判断输入项一不一样
+    - 都一样返回0，不一样返回1
+  - Mux选择器，根据需要从若干选项中挑选出正确的一个
+  - DMux分解器，输出位置有多个，把输入项推送指定位置
+    
+  - 整个计算机可以只有Nand门一种逻辑元件。
 
-  所有逻辑公式都可以用Not,And和Or来表达，<br/>
-  而Not、And和Or都可以只用Nand来表达，<br/>
-  所以每种逻辑公式都可以简化成只包含Nand的表达式，<br/>
-  因此每种逻辑门都可以只用Nand来搭建。<br/>
-  - Not(_x_) = _x_ Nand _x_
-  - _x_ And _y_ = Not(_x_ Nand _y_)<br/>
-    =(_x_ Nand _y_) Nand (_x_ Nand _y_)
-  - _x_ Or _y_ = Not(Not(_x_) And Not(_y_))<br/>
-  = (_x_ Nand _x_) Nand (_y_ Nand _y_)
-  - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
-   =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
-  - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
-  - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
+    所有逻辑公式都可以用Not,And和Or来表达，<br/>
+    而Not、And和Or都可以只用Nand来表达，<br/>
+    所以每种逻辑公式都可以简化成只包含Nand的表达式，<br/>
+    因此每种逻辑门都可以只用Nand来搭建。<br/>
+    - Not(_x_) = _x_ Nand _x_
+    - _x_ And _y_ = Not(_x_ Nand _y_)<br/>
+      =(_x_ Nand _y_) Nand (_x_ Nand _y_)
+    - _x_ Or _y_ = Not(Not(_x_) And Not(_y_))<br/>
+    = (_x_ Nand _x_) Nand (_y_ Nand _y_)
+    - _x_ Xor _y_ = ( _x_ And Not(_y_) Or Not(_x_) And _y_ ) <br/>
+     =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
+    - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
+    - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
 ### 数字逻辑电路图
   - Not | And | Or | Xor （只用Nand）
     
