--- a/学习笔记.md
+++ b/学习笔记.md
@@ -22,7 +22,8 @@
     - 都一样返回0，不一样返回1
   - Mux选择器，根据需要从若干选项中挑选出正确的一个
   - DMux分解器，输出位置有多个，把输入项推送指定位置
-    
+
+### 逻辑运算
   - 整个计算机可以只有Nand门一种逻辑元件。
 
     所有逻辑公式都可以用Not,And和Or来表达，<br/>
@@ -38,6 +39,7 @@
      =(_x_ Nand (_y_ Nand _y_)) Nand ((_x_ Nand _x_) Nand _y_)
     - Mux(_a_,_b_,_sel_) = (Not(_sel_) And _a_) Or (_sel_ And _b_)
     - DMux(_in_,_sel_): _a_ = _in_ And Not(_sel_) ; _b_ = _in_ And _sel_
+
 ### 数字逻辑电路图
   - Not | And | Or | Xor （只用Nand）
     
@@ -49,6 +51,7 @@
   - Mux4Way16 （两种组法）
 
     <img src=/SVG/Mux4Way16.svg>
+
 ### 真值表
   - Not
     
