--- a/学习笔记.md
+++ b/学习笔记.md
@@ -6,7 +6,7 @@
   
 ## 1 搭建逻辑门
 ### 什么是逻辑门？
-  逻辑门直译自logic gates，也叫与非门。每种逻辑门都对应一种常见的逻辑思维方式/公式。
+  逻辑门直译自logic gates。每种逻辑门都对应一种常见的逻辑思维方式/公式。
   - Not非门，把判断结论输入Not，返回相反的结果
     - 真变假，错变对，0变1，1变0；
   - And与门，判断是不是都对/都是真的/都是1
